Fix z-index styles/102-filters.css at web-static

--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -73,6 +73,7 @@
     padding-bottom: 39px;
     padding-left: 23px;
     padding-top: 23px;
+    z-index: 1;
 }
 
 .popover h2 {
